@@ -62,6 +62,7 @@ Version 1.11.0+svn:
    * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
    * Fixed a bug disallowing the left shift and meta key to be detected in
      the hotkeys
+   * Added -Wuseless-cast to the CMake pedantic flags.
 
 Version 1.11.0:
  * Add-ons client:
